Remove scrollbars when fixed

--- a/assets/sass/patterns/molecules/view-selector.scss
+++ b/assets/sass/patterns/molecules/view-selector.scss
@@ -176,7 +176,6 @@
 
   .view-selector--fixed {
     max-height: 100vh;
-    overflow: scroll;
     @include padding(30, "top");
     position: fixed;
     top: 0;
